Update Linear Regression - Manual Function.ipynb

--- a/Linear Regression - Manual Function.ipynb
+++ b/Linear Regression - Manual Function.ipynb
@@ -23,7 +23,7 @@
     "        self.x = x\n",
     "        self.y = y\n",
     "\n",
-    "    def ols(self): \n",
+    "    def correlation(self): \n",
     "        #listas vazias para receber dados\n",
     "        xi_xm = [] \n",
     "        yi_ym = []\n",
@@ -43,7 +43,7 @@
     "        correlation = soma/(np.std(self.x) * np.std(self.y))\n",
     "        return correlation\n",
     "\n",
-    "    def beta_alpha(self, correlation):\n",
+    "    def beta_alpha(self, correlation):\n", #MQO calculo
     "        #beta -> corr(x, y) * std(x) / std(y)\n",
     "        #alpha -> media (y) - beta * media(x)\n",
     "        beta = (correlation * np.std(self.y)) / np.std(self.x)\n",
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "dados = linear_regression(x, y)\n",
-    "corr = dados.ols()\n",
+    "corr = dados.correlation()\n",
     "beta, alpha = dados.beta_alpha(corr)\n",
     "residuos = dados.resid(alpha, beta)\n",
     "r2 = dados.r2(alpha, beta)*100"
